--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+    <link rel="stylesheet" href="style.css">
     <div class="Heading">
         <h1>Hello Microverse</h1>
     </div>
