imported css link in html, changed h1 tag

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="style.css">
-    <div class="Heading">
+    <div>
         <h1>Hello Microverse</h1>
     </div>
 </body>
